componente de busqueda por ciudad

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 <ul class="list-group">
-    <li class="list-group-item" [routerLink]="['/home']" routerLinkActive="active" >
+    <!-- <li class="list-group-item" [routerLink]="['/home']" routerLinkActive="active" >
         Home page
     </li>
     <li class="list-group-item" [routerLink]="['/about']" routerLinkActive="active" >
@@ -10,5 +10,14 @@
     </li>
     <li class="list-group-item" [routerLink]="['/contact']" routerLinkActive="active" >
         Contact page
+    </li> -->
+    <li class="list-group-item" [routerLink]="['/countries/byCapital']" routerLinkActive="active" >
+        By Capital page
+    </li>
+    <li class="list-group-item" [routerLink]="['/countries/byCountry']" routerLinkActive="active" >
+        By Country page
+    </li>
+    <li class="list-group-item" [routerLink]="['/countries/byRegion']" routerLinkActive="active" >
+        By Region page
     </li>
 </ul>
