--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -11,6 +11,10 @@
 <div class="row">
     <div class="col">
         <hr>
-        tabla de resultados
+        <ul>
+            <li *ngFor="let country of countries">
+                {{ country.capital }} - {{ country.population }}
+            </li>
+        </ul>
     </div>
 </div>
