--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -11,10 +11,6 @@
 <div class="row">
     <div class="col">
         <hr>
-        <ul>
-            <li *ngFor="let country of countries">
-                {{ country.capital }} - {{ country.population }}
-            </li>
-        </ul>
+        <app-country-table [countries]="countries"></app-country-table>
     </div>
 </div>
