Busquedas por pais y region

--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-warning text-center" *ngIf="countries.length === 0; else table">
-    No hay capitales que mostrar
+    No hay paises que mostrar
 </div>
 
 <ng-template #table>
