--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -11,6 +11,7 @@
 <div class="row">
     <div class="col">
         <hr>
+        <shared-loading-spinner></shared-loading-spinner>
         <app-country-table [countries]="countries"></app-country-table>
     </div>
 </div>
