--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col">
         <hr>
-        <shared-loading-spinner></shared-loading-spinner>
+        <shared-loading-spinner *ngIf="isLoading" ></shared-loading-spinner>
         <app-country-table [countries]="countries"></app-country-table>
     </div>
 </div>
