--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,9 +2,12 @@
 <hr>
 
 <div class="row">
-    <div class="col">
+    <div class="col text-center">
         <!-- SearchBox -->
-        <shared-search-box (inputValue)="searchByRegion($event)" placeholder="Buscar por regíon"></shared-search-box>
+        <!-- <shared-search-box (onDebounce)="searchByRegion($event)" placeholder="Buscar por regíon"></shared-search-box> -->
+        <button class="btn mx-2" *ngFor="let region of regions" (click)="searchByRegion(region)" [ngClass]="{'btn-outline-primary': selectRegion === region}">
+            {{ region }}
+        </button>
     </div>
 </div>
 
