Mantenener la busqueda en pantalla parte 2

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -3,6 +3,7 @@
     [placeholder]="placeholder"
     class="form-control"
     #textInput
+    [value]="initialValue"
     (keyup)="onKeyPress(textInput.value)"
     (keyup.enter)="emitValueInput(textInput.value)"
 >
