--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col">
         <!-- SearchBox -->
-        <shared-search-box (onDebounce)="searchByCapital($event)" placeholder="Buscar por Capital"></shared-search-box>
+        <shared-search-box (onDebounce)="searchByCapital($event)" placeholder="Buscar por Capital" [initialValue]="initialValue"></shared-search-box>
     </div>
 </div>
 
