--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col">
         <!-- SearchBox -->
-        <shared-search-box (onDebounce)="searchByCountry($event)" placeholder="Buscar por país"></shared-search-box>
+        <shared-search-box (onDebounce)="searchByCountry($event)" placeholder="Buscar por país" [initialValue]="initialValue"></shared-search-box>
     </div>
 </div>
 
